# rust-axum-bevy-rapier

./: Aptfile  Cargo.toml  Procfile
src/: lib.rs  main.rs
src/game/: components.rs  mod.rs  resources.rs  systems.rs
